syntax = "proto3";

option go_package = "./proto";

service TestService {

  rpc Download(fileRequest) returns (stream fileTransfer);

  //  rpc Upload(stream fileTransfer) returns (fileResponse);
}

message fileTransfer {
  bytes fileChunk = 1;
  Metadata metadata = 2;
}

message Metadata {

  uint32 numberVariable = 1;
  string predictVariable = 2;
  string variableNames = 3;
  string variableTypes = 4;
  bool isCleaned = 5;
  bool isEncoded = 6;
  bool isStandardized = 7;
  string description = 8;
}
message fileRequest { string fileName = 1; }

message fileResponse {
  string fileName = 1;
  string savedPath = 2;
}
